examples/test/testpolicy8238.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8238
  namespace: namespace165
spec:
  podSelector:
    matchLabels:
      key19: value32
      key43: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value3
          key7: value38
      podSelector:
        matchLabels:
          key9: value19
          key28: value25
          key49: value14
